--- a/gltests/Makefile.am
+++ b/gltests/Makefile.am
@@ -45,9 +45,9 @@ AM_LIBTOOLFLAGS = --preserve-dup-deps
 ## begin gnulib module accept
 
 
-EXTRA_DIST += winsock.c
+EXTRA_DIST += accept.c w32sock.h
 
-EXTRA_libtests_a_SOURCES += winsock.c
+EXTRA_libtests_a_SOURCES += accept.c
 
 ## end   gnulib module accept
 
@@ -72,9 +72,9 @@ EXTRA_DIST += test-arpa_inet.c
 ## begin gnulib module bind
 
 
-EXTRA_DIST += winsock.c
+EXTRA_DIST += bind.c w32sock.h
 
-EXTRA_libtests_a_SOURCES += winsock.c
+EXTRA_libtests_a_SOURCES += bind.c
 
 ## end   gnulib module bind
 
@@ -161,21 +161,12 @@ EXTRA_libtests_a_SOURCES += inet_pton.c
 
 ## end   gnulib module inet_pton
 
-## begin gnulib module ioctl
-
-
-EXTRA_DIST += ioctl.c
-
-EXTRA_libtests_a_SOURCES += ioctl.c
-
-## end   gnulib module ioctl
-
 ## begin gnulib module listen
 
 
-EXTRA_DIST += winsock.c
+EXTRA_DIST += listen.c w32sock.h
 
-EXTRA_libtests_a_SOURCES += winsock.c
+EXTRA_libtests_a_SOURCES += listen.c
 
 ## end   gnulib module listen
 
@@ -245,9 +236,9 @@ EXTRA_DIST += test-quotearg.c
 ## begin gnulib module setsockopt
 
 
-EXTRA_DIST += winsock.c
+EXTRA_DIST += setsockopt.c w32sock.h
 
-EXTRA_libtests_a_SOURCES += winsock.c
+EXTRA_libtests_a_SOURCES += setsockopt.c
 
 ## end   gnulib module setsockopt
 
@@ -337,33 +328,6 @@ check_PROGRAMS += test-string
 EXTRA_DIST += test-string.c
 
 ## end   gnulib module string-tests
-
-## begin gnulib module sys_ioctl
-
-BUILT_SOURCES += $(SYS_IOCTL_H)
-
-# We need the following in order to create <sys/ioctl.h> when the system
-# does not have a complete one.
-sys/ioctl.h: sys_ioctl.in.h
-	@MKDIR_P@ sys
-	rm -f $@-t $@
-	{ echo '/* DO NOT EDIT! GENERATED AUTOMATICALLY! */'; \
-	  sed -e 's|@''HAVE_SYS_IOCTL_H''@|$(HAVE_SYS_IOCTL_H)|g' \
-	      -e 's|@''INCLUDE_NEXT''@|$(INCLUDE_NEXT)|g' \
-	      -e 's|@''PRAGMA_SYSTEM_HEADER''@|@PRAGMA_SYSTEM_HEADER@|g' \
-	      -e 's|@''NEXT_SYS_IOCTL_H''@|$(NEXT_SYS_IOCTL_H)|g' \
-	      -e 's|@''GNULIB_IOCTL''@|$(GNULIB_IOCTL)|g' \
-	      -e 's|@''SYS_IOCTL_H_HAVE_WINSOCK2_H''@|$(SYS_IOCTL_H_HAVE_WINSOCK2_H)|g' \
-	      -e '/definition of GL_LINK_WARNING/r $(LINK_WARNING_H)' \
-	      < $(srcdir)/sys_ioctl.in.h; \
-	} > $@-t
-	mv $@-t $@
-MOSTLYCLEANFILES += sys/ioctl.h sys/ioctl.h-t
-MOSTLYCLEANDIRS += sys
-
-EXTRA_DIST += sys_ioctl.in.h
-
-## end   gnulib module sys_ioctl
 
 ## begin gnulib module sys_select-tests
 
