--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-# Copyright (C) 2002, 2003, 2004, 2005, 2007 Simon Josefsson.
+# Copyright (C) 2002, 2003, 2004, 2005, 2007, 2008 Simon Josefsson.
 #
 # This file is part of GNU SASL.
 #
@@ -16,9 +16,10 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-EXTRA_DIST = README
-
+AM_CFLAGS = $(WARN_CFLAGS)
 AM_CPPFLAGS = -I$(top_srcdir)/lib/src -I../lib/src
 LDADD = ../lib/src/libgsasl.la
+
+EXTRA_DIST = README
 
 noinst_PROGRAMS = client client-serverfirst client-mech client-callback
