Update gnulib files.

--- a/Makefile.am
+++ b/Makefile.am
@@ -20,5 +20,5 @@ SUBDIRS = po gl lib src examples gltests tests doc
 
 EXTRA_DIST = cfg.mk maint.mk .clcopying
 
-ACLOCAL_AMFLAGS = -I m4 -I gl/m4
+ACLOCAL_AMFLAGS = -I m4 -I gl/m4 -I lib/m4 -I lib/gl/m4
 DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --disable-obsolete
