Update gdoc and use gdoc -pkg-name.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-# Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson.
+# Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Simon Josefsson.
 #
 # This file is part of GNU SASL.
 #
@@ -354,11 +354,13 @@ doit:
 	echo -n "Creating function documentation" && \
 	for i in `./gdoc -listfunc $(GDOC_SRC)`; do \
 		./gdoc -man \
-			-module $(PACKAGE) -sourceversion $(VERSION) \
+			-module $(PACKAGE) \
+			-sourceversion $(VERSION) \
 			-bugsto $(PACKAGE_BUGREPORT) \
+			-pkg-name $(PACKAGE_NAME) \
 			-includefuncprefix \
 			-seeinfo $(PACKAGE) -verbatimcopying \
-			-copyright "2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson" \
+			-copyright "2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Simon Josefsson" \
 			-function $$i \
 			$(GDOC_SRC) > man/$$i.3 && \
 		./gdoc -texinfo -function $$i \
