--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -357,7 +357,7 @@ doit:
 			-module $(PACKAGE) \
 			-sourceversion $(VERSION) \
 			-bugsto $(PACKAGE_BUGREPORT) \
-			-pkg-name $(PACKAGE_NAME) \
+			-pkg-name "$(PACKAGE_NAME)" \
 			-includefuncprefix \
 			-seeinfo $(PACKAGE) -verbatimcopying \
 			-copyright "2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Simon Josefsson" \
