--- a/lib/gltests/Makefile.am
+++ b/lib/gltests/Makefile.am
@@ -32,9 +32,9 @@ MAINTAINERCLEANFILES =
 AM_CPPFLAGS = \
   -I. -I$(srcdir) \
   -I../.. -I$(srcdir)/../.. \
-  -I../gl -I$(srcdir)/../gl
+  -I../../lib/gl -I$(srcdir)/../../lib/gl
 
-LDADD = libtests.a ../gl/libgl.la libtests.a $(LIBTESTS_LIBDEPS)
+LDADD = libtests.a ../../lib/gl/libgl.la libtests.a $(LIBTESTS_LIBDEPS)
 
 libtests_a_SOURCES =
 libtests_a_LIBADD = $(gltests_LIBOBJS)
