Use visibility module from gnulib.

--- a/lib/src/Makefile.am
+++ b/lib/src/Makefile.am
@@ -19,8 +19,8 @@
 
 lib_LTLIBRARIES = libgsasl.la
 
-AM_CFLAGS = $(WARN_CFLAGS)
-AM_CPPFLAGS = -I$(srcdir)/../gl -I../gl -I$(srcdir)/..
+AM_CFLAGS = $(WARN_CFLAGS) $(CFLAG_VISIBILITY)
+AM_CPPFLAGS = -I$(srcdir)/../gl -I../gl -I$(srcdir)/.. -DGSASL_BUILDING
 DEFS = -DLOCALEDIR=\"$(datadir)/locale\" @DEFS@
 
 EXTRA_DIST = doxygen.c
