Fix syntax-check nits.

--- a/lib/gssapi/Makefile.am
+++ b/lib/gssapi/Makefile.am
@@ -31,4 +31,4 @@ if SERVER
 libgsasl_gssapi_la_SOURCES += server.c
 endif
 
-libgsasl_gssapi_la_LIBADD = @LTLIBGSS@
+libgsasl_gssapi_la_LIBADD = $(LTLIBGSS)
