--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,7 +27,7 @@ gsasl_SOURCES = gsasl.c $(BUILT_SOURCES) gsasl.ggo \
 	imap.c imap.h smtp.c smtp.h \
 	callbacks.h callbacks.c internal.h
 gsasl_LDADD = ../lib/src/libgsasl.la ../gl/libgl.la \
-	@LTLIBREADLINE@ @LTLIBGNUTLS@ @LIBSOCKET@
+	$(LTLIBREADLINE) $(LTLIBGNUTLS) $(LIBSOCKET)
 
 localedir = $(datadir)/locale
 
