--- a/lib/kerberos_v5/Makefile.am
+++ b/lib/kerberos_v5/Makefile.am
@@ -18,7 +18,8 @@
 # Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 # MA 02110-1301, USA.
 
-AM_CFLAGS = $(WARN_CFLAGS) $(CFLAG_VISIBILITY)
+AM_CFLAGS = $(WERROR_CFLAGS) $(WSTACK_CFLAGS) $(WARN_CFLAGS)
+AM_CFLAGS += $(CFLAG_VISIBILITY)
 # -Igl is for strdup.
 AM_CPPFLAGS = -I$(srcdir)/../src -I../src -I$(srcdir)/../gl
 
