--- a/gltests/Makefile.am
+++ b/gltests/Makefile.am
@@ -160,6 +160,15 @@ EXTRA_DIST += test-getline.c
 
 ## end   gnulib module getline-tests
 
+## begin gnulib module getpagesize
+
+
+EXTRA_DIST += getpagesize.c
+
+EXTRA_libtests_a_SOURCES += getpagesize.c
+
+## end   gnulib module getpagesize
+
 ## begin gnulib module gettext
 
 # This is for those projects which use "gettextize --intl" to put a source-code
@@ -281,6 +290,14 @@ check_PROGRAMS += test-mbsinit
 EXTRA_DIST += test-mbsinit.sh test-mbsinit.c
 
 ## end   gnulib module mbsinit-tests
+
+## begin gnulib module memchr-tests
+
+TESTS += test-memchr
+check_PROGRAMS += test-memchr
+EXTRA_DIST += test-memchr.c zerosize-ptr.h
+
+## end   gnulib module memchr-tests
 
 ## begin gnulib module netdb-tests
 
