Update gnulib files.

--- a/gl/Makefile.am
+++ b/gl/Makefile.am
@@ -572,7 +572,7 @@ EXTRA_libgl_la_SOURCES += mbsinit.c
 ## begin gnulib module memchr
 
 
-EXTRA_DIST += memchr.c
+EXTRA_DIST += memchr.c memchr.valgrind
 
 EXTRA_libgl_la_SOURCES += memchr.c
 
